# pawpet

./: .gitignore  README.md
kicad/: pawpet.kicad_pcb  pawpet.kicad_sch
pawcon/: .gitignore  Cargo.toml  notes.md  old_main.rs
pawcon/lib/hf2/src/: lib.rs  pawpet.rs
pawcon/scripts/: build.ps1
pawcon/src/: main.rs
pawpet/: .gitignore  Cargo.toml  notes-fs.md  notes.md
pawpet/.cargo/: config
pawpet/games/: Cargo.toml
pawpet/games/src/: eggstate.rs  emptystate.rs  game1.rs  gamestate.rs  image.rs  lib.rs  menustate.rs
pawpet/lib/hf2hid/: Cargo.toml
pawpet/lib/hf2hid/src/: lib.rs
pawpet/lib/pawbsp/: Cargo.toml
pawpet/lib/pawbsp/src/: lib.rs
pawpet/lib/pawdevices/: Cargo.toml
pawpet/lib/pawdevices/src/: battery_monitor.rs  buttons.rs  display.rs  lib.rs  sleepy_dog.rs  storage_simple.rs  sys_timer.rs  tone.rs  vcom_toggle.rs
pawpet/lib/pawdevicetraits/: Cargo.toml
pawpet/lib/pawdevicetraits/src/: lib.rs
pawpet/lib/spi-memory/: Cargo.toml
pawpet/lib/spi-memory/src/: lib.rs  series25.rs
pawpet/patch/: clock.patch
pawpet/pawboot/: Cargo.toml  build.rs  memory.x
pawpet/pawboot/src/: main.rs
pawpet/pawos/: Cargo.toml
pawpet/pawos/src/: main.rs
pawpet/png2c/: png2c.py
pawpet/scripts/: build.ps1  debug.ps1  gdb_bmp  gdb_segger  sdk-setup.ps1  sprites.ps1
pawpet/scripts/old/: jlink.ps1
pawsim/: .gitignore  Cargo.toml  index.html  index.js  notes.md
pawsim/assets/: creature.paw  egg.paw  egg_wobble.paw  pet_sit.paw  sleeptest.paw
pawsim/scripts/: build.ps1
pawsim/src/: hardware.rs  lib.rs
sprites/: battery.paw  bg1.paw  creature-idle.aseprite  icons.paw  pet1_idle.paw  slime.paw  window.paw
