[package]
name = "games"
version = "0.1.0"
edition = "2021"


[dependencies]
embedded-graphics = "0.7.1"
heapless = "^0.7"
embedded-alloc = "0.5.0"
rtt-target = "0.4.0"


[dependencies.pawdevicetraits]
version = "0.1.0"
default-features = false
path = "../lib/pawdevicetraits"


[dependencies.pawdevices]
version = "0.1.0"
default-features = false
path = "../lib/pawdevices"
optional = true

[features]
firmware = ["pawdevices"]
