[package]
name = "pawos"
version = "0.1.0"
edition = "2021"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.15.1"
default-features = false
path = "../target/atsamd/hal"

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embedded-graphics = "0.7.1"
heapless = "0.7"
panic-halt = "0.2"
critical-section = "1.0"
usbd-hid = "0.6.1"
defmt = "0.3.2"
rtt-target = "0.4.0"

[features]
default = ["rt", "atsamd-hal/samd21g", "usb", "unproven", "dma"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device"]
dma = ["atsamd-hal/dma"]

[dependencies.hf2hid]
version = "0.1.0"
default-features = false
path = "../lib/hf2hid"

[dependencies.pawbsp]
version = "0.1.0"
default-features = false
path = "../lib/pawbsp"

[dependencies.pawdevices]
version = "0.1.0"
default-features = false
path = "../lib/pawdevices"

[dependencies.pawdevicetraits]
version = "0.1.0"
default-features = false
path = "../lib/pawdevicetraits"

[dependencies.games]
version = "0.1.0"
default-features = false
path = "../games"
features = ["firmware"]

[dependencies.spi-memory]
version = "0.3.0"
default-features = false
path = "../lib/spi-memory"
