[package]
name = "pawdevices"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.15.1"
default-features = false
path = "../../target/atsamd/hal"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embedded-graphics = "0.7.1"
embedded-hal = "^ 0.2"
heapless = "0.7"
panic-halt = "0.2"
critical-section = "1.0"
rtt-target = "0.4.0"
crc = {git = "https://github.com/mrhooray/crc-rs"}

[features]
default = ["rt", "atsamd-hal/samd21g", "unproven", "dma"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
dma = ["atsamd-hal/dma"]
trait_only = []
c-stubs = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pawbsp]
version = "0.1.0"
default-features = false
path = "../pawbsp"

[dependencies.pawdevicetraits]
version = "0.1.0"
default-features = false
path = "../pawdevicetraits"

[dependencies.spi-memory]
version = "0.3.0"
default-features = false
path = "../spi-memory"